# lino-arguments

./: .gitignore  .gitkeep  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.js  index.test.js  package-lock.json  package.json
.changeset/: comprehensive-case-study-issue-10.md  fix-trusted-publishing.md  fix-version-flag-conflict.md  implement-make-config-api.md  manual-release-5d3d8c98.md  manual-release-60e5d351.md  manual-release-8ac8f440.md  manual-release-d4fa9aa7.md  manual-release-fd19dba0.md  use-getenv-package.md
examples/: .lenv.example  advanced-usage.js  basic-usage.js  enable-version-and-help.js
experiments/: minimal-repro-help.mjs  minimal-repro-version.mjs  quick-test-version.mjs  root-cause-analysis.md  test-ci-reproduction.mjs  test-registry-checks.mjs  test-without-strict.mjs  test_trait_derive.rs  workflow-comparison.md
js/: CHANGELOG.md  package-lock.json  package.json
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 20250111-cicd-best-practices.md  README.md  added-clap-reexports-and-make-config.md  added-lino-env-integration.md  added-rust-badges.md  badges-in-github-releases.md  fix-duplicate-publish.md
rust/examples/: functional.rs  struct_based.rs
rust/src/: lib.rs  main.rs
rust/tests/: integration_test.rs
scripts/: check-changelog-fragment.mjs  check-file-size.mjs  check-release-needed.mjs  check-version-modification.mjs  collect-changelog.mjs  create-changelog-fragment.mjs  create-github-release.mjs  create-manual-changeset.mjs  detect-code-changes.mjs  format-github-release.mjs  format-release-notes.mjs  (+8 more)
(+46 files in other folders)
