[package]
name = "lino-arguments"
version = "0.1.0"
edition = "2021"
authors = []
license = "Unlicense"
description = "A unified configuration library combining environment variables and CLI arguments with a clear priority chain"
repository = "https://github.com/link-foundation/lino-arguments"
keywords = ["lino", "arguments", "cli", "environment", "config"]
categories = ["command-line-interface", "config"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lino-arguments"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
lino-env = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
